<resources>
    <string name="app_name">Slagalica</string>
    <string name="lbl_email">Email adresa</string>
    <string name="lbl_lozinka">Lozinka</string>
    <string name="lbl_korisnicko_ime">Korisničko ime</string>
    <string name="lbl_potvrdi_lozinku">Potvrdi lozinku</string>
    <string name="lbl_region">Region</string>
    <string name="btn_prijava">Prijava</string>
    <string name="btn_registracija">Registracija</string>
    <string name="btn_vec_imas_nalog">Već imaš nalog? Prijavi se</string>
    <string name="btn_nemas_nalog">Nemaš nalog? Registruj se</string>
    <string name="lbl_dobrodosli">Dobrodošli u Slagalicu!</string>
    <string name="lbl_registracija_naslov">Kreiranje naloga</string>
    <string name="hint_email">primjer@email.com</string>
    <string name="hint_lozinka">Unesi lozinku</string>
    <string name="hint_korisnicko_ime">Unesi korisničko ime</string>
    <string name="hint_potvrdi_lozinku">Ponovi lozinku</string>
    <string name="err_prazno_polje">Ovo polje je obavezno</string>
    <string name="err_neispravni_podaci">Neispravni podaci za prijavu</string>
    <string name="err_lozinke_ne_poklapaju">Lozinke se ne poklapaju</string>
    <string name="err_neispravan_email">Unesite ispravnu email adresu</string>
    <string name="msg_verifikacioni_mejl">Verifikacioni mejl je poslan na vašu adresu</string>
    <string name="title_profil">Profil</string>
    <string name="lbl_tokeni">Tokeni</string>
    <string name="lbl_zvezde">Zvezdice</string>
    <string name="lbl_liga">Liga</string>
    <string name="lbl_qr_kod">QR kod za poziv prijatelja</string>
    <string name="lbl_statistika">Statistika igrača</string>
    <string name="lbl_ukupno_partija">Ukupan broj partija</string>
    <string name="lbl_pobede">Pobede</string>
    <string name="lbl_porazi">Porazi</string>
    <string name="lbl_prosek_bodova">Prosečno bodova po partiji</string>
    <string name="lbl_odigrano_partija">Odigrano partija</string>
    <string name="btn_promeni_avatar">Promeni avatar</string>
    <string name="btn_logout">Odjavi se</string>
    <string name="btn_promeni_lozinku">Promijeni lozinku</string>
    <string name="dlg_promeni_lozinku_title">Promjena lozinke</string>
    <string name="dlg_promeni_lozinku_potvrdi">Sačuvaj</string>
    <string name="msg_lozinka_promenjena">Lozinka je uspješno promijenjena.</string>
    <string name="dlg_logout_title">Odjava</string>
    <string name="dlg_logout_msg">Da li ste sigurni da želite da se odjavite?</string>
    <string name="dlg_logout_confirm">Odjavi se</string>
    <string name="dlg_logout_cancel">Otkaži</string>
    <string name="dlg_avatar_title">Izaberi avatar</string>
    <string name="fmt_procenat">%1$.0f%%</string>
    <string name="fmt_pobede">Pobede: %1$.0f%%</string>
    <string name="fmt_porazi">Porazi: %1$.0f%%</string>
    <string name="nav_header_naslov">Slagalica</string>
    <string name="nav_header_podnaslov">Korisnik</string>
    <string name="nav_igraj">Igraj</string>
    <string name="nav_notifikacije">Notifikacije</string>
    <string name="nav_odjava">Odjava</string>
    <string name="nav_partija">Partija</string>
    <string name="nav_cet">Čet</string>
    <string name="nav_rang_lista">Rang lista</string>
    <string name="tab_nedeljno">Nedeljno</string>
    <string name="tab_mesecno">Mesečno</string>
    <string name="hint_poruka_cet">Napišite poruku…</string>
    <string name="lbl_prazan_cet">Još uvijek nema poruka u vašem regionu. Budite prvi!</string>
    <string name="lbl_prazna_rang_lista">Niko iz ovog ciklusa još nije odigrao partiju.</string>
    <string name="navigation_drawer_open">Otvori navigacioni meni</string>
    <string name="navigation_drawer_close">Zatvori navigacioni meni</string>
    <string name="game_ko_zna_zna">Ko zna zna</string>
    <string name="game_asocijacije">Asocijacije</string>
    <string name="game_spojnice">Spojnice</string>
    <string name="metric_ko_zna_zna">Pogođenih pitanja</string>
    <string name="metric_moj_broj">Pronađen tačan broj</string>
    <string name="metric_korak_po_korak">Pogođen pojam</string>
    <string name="metric_asocijacije">Rešeno asocijacija</string>
    <string name="metric_skocko">Pogođena kombinacija</string>
    <string name="metric_spojnice">Povezanih pojmova</string>
    <string name="lbl_bodovi">Bodovi</string>
    <string name="lbl_vrijeme">Preostalo: %1$s s</string>
    <string name="lbl_runda">Runda %1$d / %2$d</string>
    <string name="btn_dalje">Dalje</string>
    <string name="btn_zavrsi">Završi</string>
    <string name="btn_pokusaj">Pokušaj</string>
    <string name="btn_potvrdite">Potvrdi</string>
    <string name="lbl_vas_rezultat">Vaš rezultat: %1$d bodova</string>
    <string name="lbl_cekanje">Čeka se protivnik...</string>
    <string name="igra_korak_naslov">Korak po korak</string>
    <string name="igra_korak_opis">Pronađi zadati pojam u maksimalno 7 koraka</string>
    <string name="lbl_korak">Korak %1$d / 7</string>
    <string name="hint_upisite_odgovor">Upišite odgovor...</string>
    <string name="btn_sledeci_korak">Sljedeći korak</string>
    <string name="lbl_trazeni_pojam">Traženi pojam</string>
    <string name="lbl_bodovi_korak">Na ovom koraku možete osvojiti: %1$d bodova</string>
    <string name="igra_moj_broj_naslov">Moj broj</string>
    <string name="igra_moj_broj_opis">Pomoću datih brojeva dođi do traženog rezultata</string>
    <string name="lbl_trazeni_broj">Traženi broj:</string>
    <string name="lbl_dostupni_brojevi">Dostupni brojevi:</string>
    <string name="lbl_tvoj_izraz">Tvoj izraz:</string>
    <string name="btn_stop">STOP</string>
    <string name="btn_obrisi">⌫</string>
    <string name="btn_reset_izraz">Resetuj</string>
    <string name="hint_izraz">Npr: (25 + 75) * 3 / 5</string>
    <string name="msg_tocno">Tačno! Pronašli ste traženi broj.</string>
    <string name="msg_netocno">Netačno. Vaš rezultat je bliži za %1$d.</string>
    <string name="igra_skocko_naslov">Skočko</string>
    <string name="igra_skocko_opis">Pogodi kombinaciju 4 znaka u 6 pokušaja</string>
    <string name="lbl_pokusaj">Pokušaj %1$d / 6</string>
    <string name="lbl_tacno_mjesto">● Tačno mjesto</string>
    <string name="lbl_netacno_mjesto">○ Pogrešno mjesto</string>
    <string name="btn_provjeri">Provjeri</string>
    <string name="lbl_odaberi_znakove">Odaberi 4 znaka:</string>
    <string name="lbl_rezultat_provjere">Tačnih: %1$d | Pogrešno: %2$d</string>
    <string name="naslov_notifikacije">Notifikacije</string>
    <string name="btn_sve">Sve</string>
    <string name="btn_procitane">Pročitane</string>
    <string name="btn_neprocitane">Nepročitane</string>
    <string name="btn_oznaci_procitano">Označi kao pročitano</string>
    <string name="lbl_prazna_lista">Nema notifikacija</string>
    <string name="kanal_chat">Poruke</string>
    <string name="kanal_rang">Rangiranje</string>
    <string name="kanal_nagrade">Nagrade</string>
    <string name="kanal_ostalo">Ostalo</string>
    <string name="mp_cekamo_protivnika">Poslato! Čekamo protivnika…</string>
    <string name="mp_protivnik_na_potezu">⏳ Protivnik je na potezu…</string>
    <string name="mp_nije_tvoj_potez">Nije tvoj potez!</string>
    <string name="mp_asoc_tvoj_potez">Tvoj potez - otvori polje</string>
    <string name="mp_asoc_pogadjaj">Pogađaj ili propusti potez</string>
    <string name="mp_asoc_protivnik">Protivnik je na potezu</string>
    <string name="mp_asoc_propusti">Propusti potez</string>
    <string name="mp_asoc_finalno_tacno">🎉 Pogodio si konačno rešenje!</string>
    <string name="mp_asoc_kraj_runde">Kraj runde - rešenja su otkrivena</string>
    <string name="mp_asoc_pokusaj_kolona">Protivnik pogađa kolonu %1$s: %2$s</string>
    <string name="mp_asoc_pokusaj_finalno">Protivnik pogađa konačno rešenje: %1$s</string>
    <string name="mp_pobjeda">🎉 Pobjeda!</string>
    <string name="mp_poraz">😔 Poraz</string>
    <string name="mp_nereseno">Neriješeno!</string>
    <string name="mp_zatvori">Zatvori</string>
    <string name="mp_izaberi_igru">Izaberi igru</string>
    <string name="nav_prijatelji">Prijatelji</string>
    <string name="hint_pretraga_prijatelja">Pretraži po korisničkom imenu</string>
    <string name="btn_dodaj_prijatelja">Dodaj</string>
    <string name="btn_ukloni_prijatelja">Ukloni</string>
    <string name="btn_skeniraj_qr">Skeniraj QR kod</string>
    <string name="lbl_avatar_prijatelj">Avatar prijatelja</string>
    <string name="lbl_nema_prijatelja">Još nemaš prijatelja.\nPretraži igrače ili skeniraj QR kod.</string>
    <string name="lbl_nema_rezultata">Nema rezultata za tu pretragu</string>
    <string name="qr_skeniraj_prompt">Skenirajte QR kod prijatelja</string>
    <string name="msg_prijatelj_dodat">Prijatelj dodat!</string>
    <string name="err_qr_nevalidan">QR kod nije važeći poziv za prijatelja</string>
    <string name="btn_pozovi_partiju">⚔️ Pozovi</string>
    <string name="poziv_poslat_naslov">Poziv poslat</string>
    <string name="poziv_poslat_poruka">Čeka se odgovor prijatelja…</string>
    <string name="poziv_odbijen">Prijatelj nije prihvatio poziv.</string>
    <string name="poziv_naslov">⚔️ %1$s te poziva na partiju!</string>
    <string name="poziv_poruka">Prijateljska partija (bez tokena i zvezda).\nAutomatsko odbijanje za %1$d s…</string>
    <string name="poziv_prihvati">Prihvati</string>
    <string name="poziv_odbij">Odbij</string>
    <string name="nav_lige">Lige</string>
    <string name="lbl_trenutna_liga">Trenutna</string>
    <string name="lbl_max_liga">Najviša liga — bravo! 🏆</string>
    <string name="fmt_liga_prag">Od %1$d zvezda • +%2$d tokena/dan</string>
    <string name="fmt_zvezde">⭐ %1$d zvezda</string>
    <string name="fmt_do_sledece">Još %1$d zvezda do sljedeće lige</string>
    <string name="msg_dnevni_tokeni">Dnevna nagrada: +%1$d tokena 🪙</string>
    <string name="nav_regioni">Regioni</string>
    <string name="lbl_rang_po_regionima">Mjesečna rang lista po regionima</string>
    <string name="fmt_broj_igraca">%1$d igrača</string>
    <string name="fmt_region_zvezde">⭐ %1$d</string>
    <string name="lbl_ja_marker">%1$s (ti)</string>
    <string name="fmt_region_statistika">Registrovanih igrača: %1$d\nAktivnih sada: %2$d\n\n🥇 Prvih mjesta: %3$d\n🥈 Drugih mjesta: %4$d\n🥉 Trećih mjesta: %5$d</string>
    <string name="igra_ko_zna_zna_naslov">Ko zna zna</string>
    <string name="kzz_pitanje_format">Pitanje %1$d / %2$d</string>
    <string name="kzz_max_bodova">Možete osvojiti: 50 bodova</string>
    <string name="kzz_kraj_igre">Igra završena!</string>
    <string name="kzz_finalni_rezultat">Tvoji bodovi: %1$d\nProtivnikovi bodovi: %2$d</string>
    <string name="kzz_finalni_detalji">Tačno: %1$d • Netačno: %2$d • Promašeno: %3$d</string>
    <string name="kzz_isteklo_vreme">Vreme je isteklo!</string>
    <string name="kzz_protivnik_brzi">Protivnik je bio brži!</string>
    <string name="btn_pocni_ponovo">Počni ponovo</string>
    <string name="btn_napusti_igru">Napusti igru</string>
    <string name="igra_spojnice_naslov">Spojnice</string>
    <string name="spojnice_runda_format">Runda %1$d / %2$d</string>
    <string name="spojnice_max_bodova">Možete osvojiti: 10 bodova po rundi</string>
    <string name="spojnice_kraj_igre">Spojnice završene!</string>
    <string name="spojnice_finalni_rezultat">Tvoji bodovi: %1$d\nProtivnikovi bodovi: %2$d</string>
    <string name="spojnice_finalni_detalji">Tvoje veze: %1$d • Protivnikove: %2$d</string>
    <string name="spojnice_protivnik_runda">Protivnik je povezao %1$d od preostalih</string>
    <string name="spojnice_kriterijum_label">🎯 KRITERIJUM</string>
    <string name="igra_asocijacije_naslov">Asocijacije</string>
    <string name="asoc_runda_format">Runda %1$d / %2$d</string>
    <string name="asoc_max_bodova">Možete osvojiti: 30 bodova po rundi</string>
    <string name="asoc_kraj_igre">Asocijacije završene!</string>
</resources>