<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_igraj"
            android:icon="@android:drawable/ic_media_play"
            android:title="@string/nav_igraj"/>

        <item
            android:id="@+id/nav_notifikacije"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/nav_notifikacije"/>

        <item
            android:id="@+id/nav_prijatelji"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/nav_prijatelji"/>

        <item
            android:id="@+id/nav_lige"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="@string/nav_lige"/>

        <item
            android:id="@+id/nav_regioni"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/nav_regioni"/>

        <item
            android:id="@+id/nav_rang_lista"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/nav_rang_lista"/>

        <item
            android:id="@+id/nav_chat"
            android:icon="@android:drawable/ic_menu_send"
            android:title="@string/nav_cet"/>

    </group>

    <item android:title="Igre">
        <menu>

            <item
                android:id="@+id/nav_moj_broj"
                android:icon="@android:drawable/ic_menu_sort_by_size"
                android:title="@string/igra_moj_broj_naslov"/>

            <item
                android:id="@+id/nav_skocko"
                android:icon="@android:drawable/ic_menu_compass"
                android:title="@string/igra_skocko_naslov" />
            <item
                android:id="@+id/nav_korak_po_korak"
                android:icon="@android:drawable/ic_menu_directions"
                android:title="@string/igra_korak_naslov" />
            <item
                android:id="@+id/nav_ko_zna_zna"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/igra_ko_zna_zna_naslov"/>
            <item
                android:id="@+id/nav_spojnice"
                android:icon="@android:drawable/ic_menu_share"
                android:title="@string/igra_spojnice_naslov" />
            <item
                android:id="@+id/nav_asocijacije"
                android:icon="@android:drawable/ic_menu_view"
                android:title="@string/igra_asocijacije_naslov" />
        </menu>
    </item>

    <item
        android:id="@+id/nav_odjava"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/nav_odjava"/>

</menu>
